--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-google-button": "^0.7.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.5.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
