--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-google-button": "^0.7.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "storybook": "^6.5.16",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -31,7 +32,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook",
+    "build-storybook": "build-storybook"
   },
   "eslintConfig": {
     "extends": [
@@ -52,7 +55,10 @@
     ]
   },
   "devDependencies": {
+    "@storybook/cli": "^6.5.16",
+    "@storybook/react": "^6.5.16",
     "chromatic": "^6.17.2",
+    "react-refresh": "^0.14.0",
     "sass": "^1.59.3"
   }
 }
