--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.11",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
+    "node-sass": "^7.0.3",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -55,10 +56,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.4",
     "@storybook/cli": "^6.5.16",
     "@storybook/react": "^6.5.16",
+    "babel-jest": "^29.5.0",
     "chromatic": "^6.17.2",
-    "react-refresh": "^0.14.0",
-    "sass": "^1.59.3"
+    "identity-obj-proxy": "^3.0.0"
   }
 }
