--- a/package.json
+++ b/package.json
@@ -37,33 +37,39 @@
     "storybook": "start-storybook",
     "build-storybook": "build-storybook"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@babel/core": "^7.21.4",
-    "@babel/preset-env": "^7.21.4",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.21.4",
-    "@storybook/cli": "^6.5.16",
-    "@storybook/react": "^6.5.16",
-    "babel-jest": "^29.5.0",
-    "chromatic": "^6.17.2",
-    "identity-obj-proxy": "^3.0.0"
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm test",
+      "pre-push": "npm run lint && npm test"
+    },
+    "eslintConfig": {
+      "extends": [
+        "react-app",
+        "react-app/jest"
+      ]
+    },
+    "browserslist": {
+      "production": [
+        ">0.2%",
+        "not dead",
+        "not op_mini all"
+      ],
+      "development": [
+        "last 1 chrome version",
+        "last 1 firefox version",
+        "last 1 safari version"
+      ]
+    },
+    "devDependencies": {
+      "@babel/core": "^7.21.4",
+      "@babel/preset-env": "^7.21.4",
+      "@babel/preset-react": "^7.18.6",
+      "@babel/preset-typescript": "^7.21.4",
+      "@storybook/cli": "^6.5.16",
+      "@storybook/react": "^6.5.16",
+      "babel-jest": "^29.5.0",
+      "chromatic": "^6.17.2",
+      "husky": "^8.0.3",
+      "identity-obj-proxy": "^3.0.0"
+    }
   }
-}
