--- a/package.json
+++ b/package.json
@@ -35,13 +35,9 @@
     "test": "react-scripts test --verbose --bail --watchAll=false",
     "eject": "react-scripts eject",
     "storybook": "start-storybook",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "prepare": "husky install"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm test",
-      "pre-push": "npm run lint && npm test"
-    }},
     "eslintConfig": {
       "extends": [
         "react-app",
