--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,6 @@
     "@types/react-dom": "^18.0.11",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
-    "node-sass": "^7.0.3",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -25,6 +24,7 @@
     "react-google-button": "^0.7.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.62.1",
     "storybook": "^6.5.16",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -38,34 +38,34 @@
     "build-storybook": "build-storybook",
     "prepare": "husky install"
   },
-    "eslintConfig": {
-      "extends": [
-        "react-app",
-        "react-app/jest"
-      ]
-    },
-    "browserslist": {
-      "production": [
-        ">0.2%",
-        "not dead",
-        "not op_mini all"
-      ],
-      "development": [
-        "last 1 chrome version",
-        "last 1 firefox version",
-        "last 1 safari version"
-      ]
-    },
-    "devDependencies": {
-      "@babel/core": "^7.21.4",
-      "@babel/preset-env": "^7.21.4",
-      "@babel/preset-react": "^7.18.6",
-      "@babel/preset-typescript": "^7.21.4",
-      "@storybook/cli": "^6.5.16",
-      "@storybook/react": "^6.5.16",
-      "babel-jest": "^29.5.0",
-      "chromatic": "^6.17.2",
-      "husky": "^8.0.3",
-      "identity-obj-proxy": "^3.0.0"
-    }
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.4",
+    "@storybook/cli": "^6.5.16",
+    "@storybook/react": "^6.5.16",
+    "babel-jest": "^29.5.0",
+    "chromatic": "^6.17.2",
+    "husky": "^8.0.3",
+    "identity-obj-proxy": "^3.0.0"
   }
+}
