--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.11",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
+    "depd": "^2.0.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -63,6 +64,7 @@
     "@babel/preset-typescript": "^7.21.4",
     "@storybook/cli": "^6.5.16",
     "@storybook/react": "^6.5.16",
+    "@types/react-router-dom": "^5.3.3",
     "babel-jest": "^29.5.0",
     "chromatic": "^6.17.2",
     "husky": "^8.0.3",
